fix all Gradle warnings