@@ -29,13 +29,16 @@ dependencies {
 	// TESTS
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
-	testImplementation 'org.junit.jupiter:junit-jupiter-params'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-	testImplementation 'org.mockito:mockito-core'
-	testImplementation 'org.mockito:mockito-junit-jupiter'
+    // JUnit 5
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // Mockito
+    testImplementation 'org.mockito:mockito-core'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
 }
 
 test {
-	useJUnitPlatform()
+    jvmArgs = ['-Xshare:off', '-XX:+EnableDynamicAgentLoading']
+    useJUnitPlatform()
 	testLogging.events "passed", "skipped", "failed"
 }
